--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = "https://fearlessfe.github.io/blog/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "ananke"
-publishDir = "docs"
+publishDir = "public"
