--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://fearlessfe.github.io/blog/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "penny's blogs"
 theme = "ananke"
 publishDir = "public"
