--- a/config.yml
+++ b/config.yml
@@ -98,7 +98,7 @@ params:
   # profile
   profile:
     enabled: true # Whether to show profile bar
-    avatar: avatar.png
+    avatar: https://avatars.githubusercontent.com/u/21964308?v=4
     gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
     author: pengzhen
     author_title: Software Engineer
